Fixes in service layer. Added RequestedBookServiceImplTest.java. Added ReviewServiceImplTest.java.